<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="title">Playlist Maker</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="share">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="support_email_address">yourEmail@ya.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="itunes_base_url">https://itunes.apple.com</string>
    <string name="track_name_time_separator">  •  </string>
    <string name="artist_info_template">%1$s  •  %2$s</string>
    <string name="nothing_find">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="RefreshButton">Обновить</string>
    <string name="you_searched_for">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>
    <string name="track_name">Название композиции</string>
    <string name="artist_name">Имя артиста</string>
    <string name="zero_duration">00:00</string>
    <string name="play_pause">Играть/пауза</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="like">Нравится</string>
    <string name="album_cover">Обложка альбома</string>
</resources>