<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainActivityStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_linear_height"
        app:title="@string/title"
        app:titleTextAppearance="@style/MainTitleTextStyle"
        app:titleTextColor="@color/yp_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/std_margin"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            style="@style/MainActivityButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/media_library_button"
            style="@style/MainActivityButtonStyle"
            android:text="@string/media_library"
            app:icon="@drawable/media_library" />

        <Button
            android:id="@+id/settings_button"
            style="@style/MainActivityButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/settings" />


    </LinearLayout>

</LinearLayout>